Versão Finalizada Thiago

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
   <header class="cabecalho">
     <div class="cabecalho-content">
-      <img class="cabecalho-logo" src="/assets/images/logo.png" alt="logo-trilha-css">
+      <div class="cabecalho-logo">
+      <img  src="/assets/images/logo.png" alt="logo-trilha-css">
+      </div>
       <h1 class="cabecalho-titulo">Trilha de Css da Dio</h1>
       <p class="cabecalho-texto">A nova Trlha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais</p>
       <button class="botao-inscricao">Quero me inscrever</button>
@@ -31,7 +33,6 @@
     </section>
       <div class="divisoria">
         <h2 class="mude-o-mundo">transforme o mundo com a gente</h2>
-        <img class="woman" src="/assets/images/woman-code.png" alt="">
       </div>
       <div class="novos-desafios-content">
         <h2 class="novos-desafios-titulo">Evolua e encare novos desafios profissionais</h2>  
