--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="cabecalho">
     <div class="cabecalho-content">
       <div class="cabecalho-logo">
-      <img  src="/assets/images/logo.png" alt="logo-trilha-css">
+      <img  src="assets/images/logo.png" alt="logo-trilha-css">
       </div>
       <h1 class="cabecalho-titulo">Trilha de Css da Dio</h1>
       <p class="cabecalho-texto">A nova Trlha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais</p>
@@ -36,7 +36,7 @@
       </div>
       <div class="novos-desafios-content">
         <h2 class="novos-desafios-titulo">Evolua e encare novos desafios profissionais</h2>  
-        <img class="novos-desafios-img"src="/assets/images/professional-challenges.png" alt="novos-desafios">
+        <img class="novos-desafios-img"src="assets/images/professional-challenges.png" alt="novos-desafios">
         <span class="novos-desafios-texto">Junte-se ao novo ecossistema e transfome o mundo com a gente! Todos os dias dezenas de empresas acessam a nossa plataforma em busca de talentos mais criativos, dinâmicos e colaborativos, além do conhecimento técnico. A nossa missão é te preparar para que você conecte-se com as melhores oportunidades.</span>
       </div>
 
@@ -44,7 +44,7 @@
 
   <footer >
     <div class="rodape-content"> 
-      <img class="rodape-img" src=" /assets/images/dio-logo.png" alt="">
+      <img class="rodape-img" src="assets/images/dio-logo.png" alt="">
      <span>Acesse <a href="https://dio.me">dio.me</a> e se cadastre agora</span>
     </div>
   </footer>
